--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
           <p>Entrena per assignatura amb itineraris adaptables.</p>
           <span class="feature-link">Obrir grid de mòduls →</span>
         </a>
-        <a class="feature-card" href="flashcards.html">
+        <a class="feature-card" href="recursos.html">
           <div class="feature-icon">🧠</div>
-          <h3>Flashcards SRS</h3>
-          <p>Recorda conceptes clau amb repetició espaiada.</p>
-          <span class="feature-link">Anar a flashcards →</span>
+          <h3>Recursos</h3>
+          <p>Una biblioteca amb teoria i flashcards agrupades per assignatura.</p>
+          <span class="feature-link">Obrir Recursos →</span>
         </a>
         <a class="feature-card" href="teoria.html">
           <div class="feature-icon">📖</div>
