--- a/app.html
+++ b/app.html
@@ -49,8 +49,8 @@
       <nav class="main-nav" aria-label="Navegació principal">
         <button class="pill nav-btn" type="button" onclick="scrollToSection('tutorSection')">Tutor</button>
         <button class="pill nav-btn" type="button" onclick="scrollToSection('calendarSection')">Calendari</button>
-        <a class="pill nav-btn" href="class.html">Aula</a>
-        <a class="pill nav-btn" href="play/index.html">Live</a>
+        <button class="pill nav-btn" type="button" onclick="scrollToSection('section class')">Aula</button>
+       <button class="pill nav-btn" type="button" onclick="scrollToSection('section class')">Live</button>
         <a class="pill nav-btn nav-btn-ghost" href="/portal/supabase-portal.html">Accés professorat</a>
       </nav>
 
