--- a/recursos.html
+++ b/recursos.html
@@ -11,16 +11,50 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
-      background: linear-gradient(180deg, #f8fbff, #eef2ff 320px);
+      background: radial-gradient(circle at 18% 18%, rgba(196, 210, 254, 0.35), transparent 36%),
+        radial-gradient(circle at 82% 12%, rgba(254, 226, 226, 0.38), transparent 30%),
+        linear-gradient(180deg, #f8fbff 0%, #eef2ff 320px, #fff 100%);
     }
 
     .flashcards-hero {
+      position: relative;
+      overflow: hidden;
       margin: 40px 0 28px;
+      padding: clamp(18px, 3vw, 28px);
+      border-radius: 28px;
+      background: linear-gradient(135deg, rgba(59, 130, 246, 0.12), rgba(94, 234, 212, 0.18)),
+        linear-gradient(180deg, #fff, rgba(224, 231, 255, 0.9));
+      box-shadow: 0 24px 46px rgba(59, 130, 246, 0.16);
+      border: 1px solid rgba(59, 130, 246, 0.18);
+    }
+
+    .flashcards-hero::before,
+    .flashcards-hero::after {
+      content: '';
+      position: absolute;
+      filter: blur(20px);
+      opacity: 0.8;
+    }
+
+    .flashcards-hero::before {
+      width: 180px;
+      height: 180px;
+      top: -60px;
+      right: -40px;
+      background: radial-gradient(circle, rgba(59, 130, 246, 0.35), transparent 60%);
+    }
+
+    .flashcards-hero::after {
+      width: 240px;
+      height: 240px;
+      bottom: -90px;
+      left: -70px;
+      background: radial-gradient(circle, rgba(34, 197, 94, 0.25), transparent 60%);
     }
 
     .flashcards-hero h1 {
       margin: 0;
-      font-size: clamp(1.5rem, 1.1rem + 2vw, 2.4rem);
+      font-size: clamp(1.5rem, 1.1rem + 2vw, 2.5rem);
     }
 
     .flashcards-hero p {
@@ -34,13 +68,13 @@
       align-items: center;
       gap: 8px;
       margin: 18px 0 0;
-      padding: 8px 16px;
+      padding: 10px 18px;
       border-radius: 999px;
-      background: rgba(37, 99, 235, 0.12);
-      color: #1d4ed8;
-      font-weight: 600;
+      background: linear-gradient(120deg, rgba(16, 185, 129, 0.2), rgba(59, 130, 246, 0.2));
+      color: #0f172a;
+      font-weight: 700;
       font-size: 0.95rem;
-      box-shadow: 0 10px 22px rgba(37, 99, 235, 0.16);
+      box-shadow: 0 12px 24px rgba(16, 185, 129, 0.18);
     }
 
     .flashcards-nav {
@@ -54,14 +88,15 @@
       display: inline-flex;
       align-items: center;
       gap: 8px;
-      background: rgba(34, 197, 94, 0.12);
-      color: #047857;
-      font-weight: 700;
+      background: linear-gradient(120deg, rgba(34, 197, 94, 0.14), rgba(59, 130, 246, 0.14), rgba(249, 115, 22, 0.14));
+      color: #0f172a;
+      font-weight: 800;
       letter-spacing: 0.08em;
       text-transform: uppercase;
-      padding: 6px 14px;
+      padding: 7px 16px;
       border-radius: 999px;
-      font-size: 0.8rem;
+      font-size: 0.82rem;
+      box-shadow: 0 12px 24px rgba(59, 130, 246, 0.12);
     }
 
     .topics-section,
@@ -69,6 +104,11 @@
       display: grid;
       gap: 24px;
       margin: 40px 0 70px;
+      padding: 18px 18px 22px;
+      border-radius: 22px;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0.94), rgba(240, 249, 255, 0.92));
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      box-shadow: 0 16px 30px rgba(15, 23, 42, 0.08);
     }
 
     .subjects-section {
@@ -85,6 +125,21 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
+      position: relative;
+      padding-bottom: 14px;
+    }
+
+    .topics-section header::after,
+    .game-header::after {
+      content: '';
+      position: absolute;
+      bottom: -10px;
+      left: 0;
+      width: 140px;
+      height: 4px;
+      border-radius: 999px;
+      background: linear-gradient(90deg, rgba(59, 130, 246, 0.5), rgba(16, 185, 129, 0.45), rgba(249, 115, 22, 0.45));
+      opacity: 0.9;
     }
 
     .topics-section h2,
@@ -123,9 +178,13 @@
       gap: 12px;
       border-radius: 20px;
       border: 1px solid rgba(148, 163, 184, 0.35);
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(236, 248, 255, 0.9));
+      background:
+        radial-gradient(circle at 16% 18%, rgba(59, 130, 246, 0.14), transparent 42%),
+        radial-gradient(circle at 82% 18%, rgba(16, 185, 129, 0.14), transparent 45%),
+        radial-gradient(circle at 40% 84%, rgba(249, 115, 22, 0.14), transparent 50%),
+        linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(236, 248, 255, 0.9));
       padding: 24px 22px;
-      box-shadow: var(--shadow);
+      box-shadow: 0 18px 32px rgba(15, 23, 42, 0.12);
       text-align: left;
       color: inherit;
       cursor: pointer;
@@ -161,16 +220,16 @@
 
     .topic-card:hover,
     .topic-card:focus-visible {
-      transform: translateY(-4px);
-      border-color: rgba(59, 130, 246, 0.4);
-      box-shadow: 0 18px 35px rgba(15, 23, 42, 0.12);
+      transform: translateY(-6px);
+      border-color: rgba(59, 130, 246, 0.5);
+      box-shadow: 0 22px 40px rgba(15, 23, 42, 0.16);
       outline: none;
     }
 
     .topic-card h3 {
       margin: 0;
       font-size: 1.1rem;
-      color: #1d4ed8;
+      color: #0f172a;
     }
 
     .topic-summary {
@@ -182,12 +241,13 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
-      font-weight: 600;
+      font-weight: 700;
       color: #0f172a;
-      background: rgba(59, 130, 246, 0.12);
+      background: linear-gradient(120deg, rgba(59, 130, 246, 0.16), rgba(94, 234, 212, 0.16), rgba(249, 115, 22, 0.14));
       border-radius: 999px;
-      padding: 6px 12px;
+      padding: 7px 13px;
       width: fit-content;
+      box-shadow: 0 12px 24px rgba(59, 130, 246, 0.1);
     }
 
     .game-section {
