Add tutor chat modal with DeepSeek hookup

--- a/app.html
+++ b/app.html
@@ -79,6 +79,9 @@
         <div id="tutorSection" class="panel card tutor-card">
           <h3 class="title tutor-title">Consell del teu tutor virtual 🤖</h3>
           <div id="recommendationText" class="subtitle">Carregant recomanació...</div>
+          <div class="tutor-actions">
+            <button class="btn-primary" type="button" onclick="openTutorChat()">💬 Parla amb el tutor</button>
+          </div>
         </div>
 
         <section id="calendarSection" class="panel card study-calendar" aria-labelledby="studyCalendarTitle">
