--- a/recursos.html
+++ b/recursos.html
@@ -10,22 +10,15 @@
   />
   <link rel="stylesheet" href="style.css" />
   <style>
-    body {
-      background: radial-gradient(circle at 18% 18%, rgba(196, 210, 254, 0.35), transparent 36%),
-        radial-gradient(circle at 82% 12%, rgba(254, 226, 226, 0.38), transparent 30%),
-        linear-gradient(180deg, #f8fbff 0%, #eef2ff 320px, #fff 100%);
-    }
-
     .flashcards-hero {
       position: relative;
       overflow: hidden;
       margin: 40px 0 28px;
       padding: clamp(18px, 3vw, 28px);
-      border-radius: 28px;
-      background: linear-gradient(135deg, rgba(59, 130, 246, 0.12), rgba(94, 234, 212, 0.18)),
-        linear-gradient(180deg, #fff, rgba(224, 231, 255, 0.9));
-      box-shadow: 0 24px 46px rgba(59, 130, 246, 0.16);
-      border: 1px solid rgba(59, 130, 246, 0.18);
+      border-radius: var(--radius);
+      background: color-mix(in srgb, var(--primary) 8%, #ffffff 92%);
+      box-shadow: var(--shadow);
+      border: 1px solid var(--hair);
     }
 
     .flashcards-hero::before,
@@ -41,7 +34,7 @@
       height: 180px;
       top: -60px;
       right: -40px;
-      background: radial-gradient(circle, rgba(59, 130, 246, 0.35), transparent 60%);
+      background: radial-gradient(circle, rgba(99, 102, 241, 0.18), transparent 60%);
     }
 
     .flashcards-hero::after {
@@ -49,7 +42,7 @@
       height: 240px;
       bottom: -90px;
       left: -70px;
-      background: radial-gradient(circle, rgba(34, 197, 94, 0.25), transparent 60%);
+      background: radial-gradient(circle, rgba(34, 197, 94, 0.14), transparent 60%);
     }
 
     .flashcards-hero h1 {
@@ -70,11 +63,12 @@
       margin: 18px 0 0;
       padding: 10px 18px;
       border-radius: 999px;
-      background: linear-gradient(120deg, rgba(16, 185, 129, 0.2), rgba(59, 130, 246, 0.2));
+      background: color-mix(in srgb, var(--primary) 12%, #ffffff 88%);
       color: #0f172a;
       font-weight: 700;
       font-size: 0.95rem;
-      box-shadow: 0 12px 24px rgba(16, 185, 129, 0.18);
+      border: 1px solid var(--hair);
+      box-shadow: var(--shadow);
     }
 
     .flashcards-nav {
@@ -88,7 +82,7 @@
       display: inline-flex;
       align-items: center;
       gap: 8px;
-      background: linear-gradient(120deg, rgba(34, 197, 94, 0.14), rgba(59, 130, 246, 0.14), rgba(249, 115, 22, 0.14));
+      background: color-mix(in srgb, var(--primary) 12%, #ffffff 88%);
       color: #0f172a;
       font-weight: 800;
       letter-spacing: 0.08em;
@@ -96,7 +90,8 @@
       padding: 7px 16px;
       border-radius: 999px;
       font-size: 0.82rem;
-      box-shadow: 0 12px 24px rgba(59, 130, 246, 0.12);
+      border: 1px solid var(--hair);
+      box-shadow: var(--shadow);
     }
 
     .topics-section,
@@ -105,10 +100,10 @@
       gap: 24px;
       margin: 40px 0 70px;
       padding: 18px 18px 22px;
-      border-radius: 22px;
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0.94), rgba(240, 249, 255, 0.92));
-      border: 1px solid rgba(148, 163, 184, 0.25);
-      box-shadow: 0 16px 30px rgba(15, 23, 42, 0.08);
+      border-radius: var(--radius);
+      background: var(--card);
+      border: 1px solid var(--hair);
+      box-shadow: var(--shadow);
     }
 
     .subjects-section {
@@ -138,8 +133,8 @@
       width: 140px;
       height: 4px;
       border-radius: 999px;
-      background: linear-gradient(90deg, rgba(59, 130, 246, 0.5), rgba(16, 185, 129, 0.45), rgba(249, 115, 22, 0.45));
-      opacity: 0.9;
+      background: linear-gradient(90deg, rgba(99, 102, 241, 0.55), rgba(14, 165, 233, 0.45));
+      opacity: 0.85;
     }
 
     .topics-section h2,
@@ -176,15 +171,11 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
-      border-radius: 20px;
-      border: 1px solid rgba(148, 163, 184, 0.35);
-      background:
-        radial-gradient(circle at 16% 18%, rgba(59, 130, 246, 0.14), transparent 42%),
-        radial-gradient(circle at 82% 18%, rgba(16, 185, 129, 0.14), transparent 45%),
-        radial-gradient(circle at 40% 84%, rgba(249, 115, 22, 0.14), transparent 50%),
-        linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(236, 248, 255, 0.9));
+      border-radius: 18px;
+      border: 1px solid var(--hair);
+      background: #fff;
       padding: 24px 22px;
-      box-shadow: 0 18px 32px rgba(15, 23, 42, 0.12);
+      box-shadow: 0 12px 24px rgba(15, 23, 42, 0.08);
       text-align: left;
       color: inherit;
       cursor: pointer;
@@ -221,8 +212,8 @@
     .topic-card:hover,
     .topic-card:focus-visible {
       transform: translateY(-6px);
-      border-color: rgba(59, 130, 246, 0.5);
-      box-shadow: 0 22px 40px rgba(15, 23, 42, 0.16);
+      border-color: rgba(99, 102, 241, 0.5);
+      box-shadow: 0 18px 32px rgba(15, 23, 42, 0.16);
       outline: none;
     }
 
@@ -243,11 +234,11 @@
       gap: 6px;
       font-weight: 700;
       color: #0f172a;
-      background: linear-gradient(120deg, rgba(59, 130, 246, 0.16), rgba(94, 234, 212, 0.16), rgba(249, 115, 22, 0.14));
+      background: rgba(99, 102, 241, 0.12);
       border-radius: 999px;
       padding: 7px 13px;
       width: fit-content;
-      box-shadow: 0 12px 24px rgba(59, 130, 246, 0.1);
+      box-shadow: 0 10px 18px rgba(15, 23, 42, 0.08);
     }
 
     .game-section {
@@ -365,10 +356,10 @@
       width: min(100%, 620px);
       margin: clamp(96px, 12vh, 160px) auto 0;
       padding: clamp(16px, 2.4vh, 26px) clamp(14px, 3vw, 28px) clamp(18px, 2.6vh, 28px);
-      border-radius: 26px;
-      border: 1px solid rgba(148, 163, 184, 0.28);
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0.96), rgba(236, 248, 255, 0.92));
-      box-shadow: 0 18px 34px rgba(15, 23, 42, 0.12);
+      border-radius: var(--radius);
+      border: 1px solid var(--hair);
+      background: var(--card);
+      box-shadow: var(--shadow);
     }
 
     .knowledge-title {
@@ -391,9 +382,9 @@
       gap: 8px;
       padding: 10px 16px;
       border-radius: 12px;
-      border: 1px solid rgba(148, 163, 184, 0.35);
-      background: rgba(224, 231, 255, 0.65);
-      color: #4338ca;
+      border: 1px solid var(--hair);
+      background: color-mix(in srgb, var(--primary) 12%, #ffffff 88%);
+      color: #1d4ed8;
       font-weight: 600;
       cursor: pointer;
       transition: box-shadow 0.2s ease, transform 0.2s ease;
@@ -487,7 +478,7 @@
       padding: 10px 20px;
       font: inherit;
       font-weight: 600;
-      background: linear-gradient(180deg, rgba(37, 99, 235, 0.12), rgba(37, 99, 235, 0.05));
+      background: color-mix(in srgb, var(--primary) 12%, #ffffff 88%);
       color: #1d4ed8;
       cursor: pointer;
       transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease, color 0.2s ease;
@@ -578,16 +569,16 @@
       justify-content: space-between;
       gap: 16px;
       padding: clamp(24px, 3vw, 34px);
-      border-radius: 24px;
-      border: 1px solid rgba(148, 163, 184, 0.35);
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0.96), rgba(241, 245, 249, 0.95));
+      border-radius: 22px;
+      border: 1px solid var(--hair);
+      background: var(--card);
       box-shadow: var(--shadow);
       backface-visibility: hidden;
     }
 
     .flashcard-back {
       transform: rotateY(180deg);
-      background: linear-gradient(180deg, rgba(226, 246, 255, 0.96), rgba(219, 234, 254, 0.95));
+      background: color-mix(in srgb, var(--primary) 10%, #ffffff 90%);
     }
 
     .flashcard-label {
@@ -602,7 +593,7 @@
       font-size: 0.75rem;
       font-weight: 600;
       color: #1d4ed8;
-      background: rgba(59, 130, 246, 0.15);
+      background: rgba(99, 102, 241, 0.12);
       border-radius: 999px;
       padding: 4px 10px;
       width: fit-content;
@@ -642,8 +633,8 @@
       justify-content: center;
       width: 140px;
       height: 140px;
-      border-radius: 32px;
-      background: linear-gradient(180deg, rgba(165, 180, 252, 0.25), rgba(59, 130, 246, 0.2));
+      border-radius: 28px;
+      background: color-mix(in srgb, var(--primary) 14%, #ffffff 86%);
       font-size: 3.2rem;
     }
 
@@ -718,8 +709,8 @@
       width: 100%;
       padding: 16px 18px;
       border-radius: 18px;
-      border: 1px solid rgba(148, 163, 184, 0.35);
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0.94), rgba(236, 248, 255, 0.9));
+      border: 1px solid var(--hair);
+      background: var(--card);
       box-shadow: var(--shadow);
       color: inherit;
       cursor: pointer;
@@ -738,9 +729,9 @@
     }
 
     .library-card[aria-current='true'] {
-      border-color: rgba(37, 99, 235, 0.8);
-      box-shadow: 0 18px 36px rgba(37, 99, 235, 0.15);
-      background: linear-gradient(180deg, rgba(226, 244, 255, 0.95), rgba(219, 234, 254, 0.92));
+      border-color: rgba(37, 99, 235, 0.6);
+      box-shadow: 0 18px 36px rgba(37, 99, 235, 0.12);
+      background: color-mix(in srgb, var(--primary) 8%, #ffffff 92%);
     }
 
     .library-status {
